--- a/templates/country_detail.html
+++ b/templates/country_detail.html
@@ -1,5 +1,54 @@
 {% extends 'base_cover.html' %}
 
-{% block main %}
-  <h1>{{ country }} currently has {{ country_deaths }} deaths</h1>
+{% block style %}
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%
+}
+
+td, th {
+    border: 1px;
+    padding: 8px;
+}
+{% endblock %}
+
+{% block script %}
+let sortDirection = false;
+let countriesData = {{ country_detail_read_db|safe }};
+
+window.onload = function() {
+    loadTableData(countriesData);
+};
+
+
+function loadTableData(countriesData) {
+    let tableBody = document.getElementById('countriesData');
+    let dataHtml = '';
+
+    for(let country of countriesData) {
+        dataHtml += `<tr><td>${country[0]}</td><td>${country[1]}</td><td>${country[2]}</td><td>${country[3]}</td><td>${country[4]}</td><td>${country[5]}</td></tr>`;
+    }
+    tableBody.innerHTML = dataHtml;
+}
+
+
+{% endblock %}
+
+
+
+{% block table %}
+    <table>
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Country</th>
+                <th>Confirmed</th>
+                <th>Deaths</th>
+                <th>Stringency Actual</th>
+                <th>Stringency</th>
+            </tr>
+        </thead>
+        <tbody id="countriesData"></tbody>
+    </table>
 {% endblock %}
