--- a/templates/base_cover.html
+++ b/templates/base_cover.html
@@ -51,7 +51,7 @@
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
           <a class="nav-link active" aria-current="page" href="/list">Countries list</a>
-          <a class="nav-link" href="/tmp1">Request data update</a>
+          <a class="nav-link active" aria-current="page" href="/update">Request data update</a>
         </nav>
       </div>
     </header>
