--- a/templates/countries_list.html
+++ b/templates/countries_list.html
@@ -4,7 +4,7 @@
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 100%
+    width: 100%;
 }
 
 td, th {
@@ -46,7 +46,7 @@ function loadTableData(countriesData) {
                 <th>Country</th>
                 <th>Confirmed</th>
                 <th>Deaths</th>
-                <th>Stringency Actual</th>
+                <th>Stringency act.</th>
                 <th>Stringency</th>
             </tr>
         </thead>
