--- a/templates/country_detail.html
+++ b/templates/country_detail.html
@@ -4,7 +4,7 @@
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 100%
+    width: 100%;
 }
 
 td, th {
@@ -36,7 +36,6 @@ function loadTableData(countriesData) {
 {% endblock %}
 
 
-
 {% block table %}
     <table>
         <thead>
@@ -45,7 +44,7 @@ function loadTableData(countriesData) {
                 <th>Country</th>
                 <th>Confirmed</th>
                 <th>Deaths</th>
-                <th>Stringency Actual</th>
+                <th>Stringency act.</th>
                 <th>Stringency</th>
             </tr>
         </thead>
