DB config update

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@ Main page
 {% endblock %}
 
 {% block main %}
-<label for="cd-dropdown">Choose country:</label>
+<label for="cd-dropdown">Select country:</label>
 <select id="cd-dropdown" class="cd-select" onchange="top.location=this.value">
 <option value="/country/abw">ABW</option>
 <option value="/country/afg">AFG</option>
