--- a/app/templates/base_cover.html
+++ b/app/templates/base_cover.html
@@ -72,7 +72,7 @@
     </main>
 
     <footer class="mt-auto text-white-50">
-      <p>WebApplication test for DevOps school by Iurii Belchenko</p>
+      <p>WebApplication Test for DevOps school by Iurii Belchenko</p>
     </footer>
   </div>
   </body>
