--- a/app/templates/base_cover.html
+++ b/app/templates/base_cover.html
@@ -72,7 +72,7 @@
     </main>
 
     <footer class="mt-auto text-white-50">
-      <p>WebApplication Flask for DevOps school by Iurii B.</p>
+      <p>WebApplication for DevOps school by Iurii B.</p>
     </footer>
   </div>
   </body>
