Fixed test bugs

--- a/app/templates/countries_list.html
+++ b/app/templates/countries_list.html
@@ -40,12 +40,12 @@ function loadTableData(countriesData) {
     <table>
         <thead>
             <tr>
-                <th>Date</th>
-                <th>Country</th>
-                <th>Confirmed</th>
-                <th>Deaths</th>
-                <th>Stringency act.</th>
-                <th>Stringency</th>
+                <th id="date">Date</th>
+                <th id="country">Country</th>
+                <th id="confirmed">Confirmed</th>
+                <th id="deaths">Deaths</th>
+                <th id="stringency_act">Stringency act.</th>
+                <th id="stringency">Stringency</th>
             </tr>
         </thead>
         <tbody id="countriesData"></tbody>
