Fixed test bugs

--- a/app/templates/countries_list.html
+++ b/app/templates/countries_list.html
@@ -38,6 +38,7 @@ function loadTableData(countriesData) {
 
 {% block table %}
     <table>
+        <caption>Countries list</caption>
         <thead>
             <tr>
                 <th id="date">Date</th>
