--- a/app/templates/country_detail.html
+++ b/app/templates/country_detail.html
@@ -38,14 +38,15 @@ function loadTableData(countriesData) {
 
 {% block table %}
     <table>
+        <caption>Country detail</caption>
         <thead>
             <tr>
-                <th>Date</th>
-                <th>Country</th>
-                <th>Confirmed</th>
-                <th>Deaths</th>
-                <th>Stringency act.</th>
-                <th>Stringency</th>
+                <th id="date">Date</th>
+                <th id="country">Country</th>
+                <th id="confirmed">Confirmed</th>
+                <th id="deaths">Deaths</th>
+                <th id="stringency_act">Stringency act.</th>
+                <th id="stringency">Stringency</th>
             </tr>
         </thead>
         <tbody id="countriesData"></tbody>
