--- a/app/templates/base_cover.html
+++ b/app/templates/base_cover.html
@@ -73,7 +73,7 @@
     </main>
 
     <footer class="mt-auto text-white-50">
-      <p>WebApp for DevOps internship by Iurii B.</p>
+      <p>WebApplication for DevOps internship by Iurii B.</p>
     </footer>
   </div>
   </body>
