Test commit into noDB

--- a/app/templates/base_cover.html
+++ b/app/templates/base_cover.html
@@ -75,7 +75,7 @@
     </main>
 
     <footer class="mt-auto text-white-50">
-      <p>WebApp for DevOps internship by Iurii B.</p>
+      <p>WebApp1 for DevOps internship by Iurii B.</p>
     </footer>
   </div>
   </body>
